--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       </h2>
       <p>You can order your favourite food directly from here!</p>
       <input
-        class="input-form"
+        class="input-form signup-input"
         type="text"
         class="form-control"
         placeholder="Enter your Email ID here"
